--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.5.1",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "dotenv": "^16.3.1",
     "firebase": "^10.0.0",
     "react": "^18.2.0",
@@ -23,6 +27,7 @@
     "reselect": "^4.1.8",
     "sass": "^1.63.6",
     "stripe": "^13.2.0",
+    "typescript": "^5.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
